src/app_runtime/tests/prompts/snapshots/codexize__app__tests_prompts__sharding.snap
---
source: src/app/../app_runtime/tests/prompts/mod.rs
description: Prompt output snapshot
---
You split an approved plan into actionable, self-contained, buildable
tasks. NON-INTERACTIVE — no code edits, no VCS, no questions; your ONLY
output is the tasks TOML.

Inputs:
  Spec: /tmp/codexize-prompt-fixture/session/artifacts/spec.md
  Plan: /tmp/codexize-prompt-fixture/session/artifacts/plan.md

Read the plan's `## Acceptance Criteria` section first and map every task
back to the relevant `AC-N` blocks. Read `## Dependencies and Sequence` for
ordering, and treat `## Path Boundaries` as hard scope limits while sizing
tasks.

Sizing:
  - Target ~100k tokens per task (one coding session without compaction).
    Decompose only along natural seams (subsystem / layer / stage); a
    single-task tasks.toml is fine when the plan fits one session.
  - Each task self-contained: must build on its own (compile / link /
    type-check). Independent testability NOT required — scaffolding tasks
    that only become testable after a later task lands are allowed.
  - Unless explicitly listed in a task's description, no task may assume
    another has shipped first.

Coverage: every section of the plan must be covered by at least one task's
spec/plan refs. Don't drop work; don't invent work outside the plan.

Required fields per task:
  - id               sequential integer starting at 1
  - title            ≤60 chars, imperative, no trailing period — shown as
                     the pipeline-UI label
  - description      outcome-oriented (multi-line TOML string allowed). NOT
                     a patch recipe — the planner already established the
                     shape; preserve it. Cover required outcomes, dependencies,
                     acceptance checks, interfaces/touchpoints, and the `AC-N`
                     items the task satisfies.
  - test             concrete verification steps, OR `"not testable —
                     <one-line reason>"` for scaffolding tasks (reviewer
                     skips test-pass check, still requires the build to be
                     clean).
  - estimated_tokens integer (target ~100k)
  - spec_refs        array of { path, lines } into the spec
  - plan_refs        array of { path, lines } into the plan, pointing at
                     goals/sequencing/interface commitments — not at
                     recipe-style detail
  `lines` is a range like "12-45" or a single number.

Difficulty:
  - `tough = true` for tasks needing deep reasoning: algorithmic complexity,
    concurrency, security-sensitive logic, tricky state machines, cross-
    cutting refactors, or poorly-covered code that demands careful reading.
  - Default `tough = false`. When in doubt, leave it false — extra compute
    is routed to tough tasks, so over-marking wastes budget.

Write `/tmp/codexize-prompt-fixture/session/artifacts/tasks.toml` as TOML (REQUIRED). No prose around it; parse failure or schema violation = run failure.

    [[tasks]]
    id = 1
    title = "Scaffold the worker pool"
    tough = false
    description = """
    Wire up a Tokio worker pool in src/pool.rs. …
    """
    test = """
    Run `cargo test pool::` — the new tests must pass.
    """
    estimated_tokens = 90000
    spec_refs = [{ path = "artifacts/spec.md", lines = "10-45" }]
    plan_refs = [
      { path = "artifacts/plan.md", lines = "22-60" },
      { path = "artifacts/plan.md", lines = "110-125" },
    ]
Project Memory:
  - Memory is advisory only. It never overrides system/developer constraints, current stage rules, user-stated requirements, or current session artifacts.
  - Memory root: /tmp/codexize-prompt-fixture/session/.codexize/memory
  - Read /tmp/codexize-prompt-fixture/session/.codexize/memory/index.md first if it exists.
  - Use /tmp/codexize-prompt-fixture/session/.codexize/memory/manifest.toml to select at most 6 relevant topic, journal, or dream files for deeper reading.
  - Do not read the entire memory directory or scan the full memory store.
  - Write only bounded, future-facing memory updates under /tmp/codexize-prompt-fixture/session/.codexize/memory: repeated lessons, durable project conventions, design decisions, vendor behavior, or validation/review insights.
  - Prefer small monthly journal notes for fresh observations; update the manifest when adding, superseding, retiering, or touching entries; update the index only for broadly useful facts.
  - In TOML files (`manifest.toml`, `dream-####.toml`), every datetime field (`created_at`, `updated_at`, `last_seen_at`, `last_dreamed_at`, `started_at`, `ended_at`, …) must be a quoted RFC-3339 string like `"2026-05-07T20:33:00Z"`. Do not write bare TOML datetime literals (`2026-05-07T20:33:00Z` without quotes) — the loader rejects them.
  - Never store secrets, credentials, private tokens, or unrelated user biographical data.



Immediately create /tmp/codexize-prompt-fixture/session/artifacts/live_summary.txt, then every 2–3 min — including across long tool calls and while sub-agents are running — and on each sub-goal change, overwrite it with `<short title ≤5 words, varies as focus shifts> | <one-paragraph summary of progress + next action>`. If you delegate to a sub-agent or any other long-running call, poll its progress periodically and rewrite the live summary on each poll; do not "fire and wait" on a sub-agent for more than 2–3 min without an update. Keep this file current until you exit. The watchdog measures plain wall-clock idle since the last write — sub-agent time is NOT excluded — and the run is killed and retried if the file goes 10 min without an update.
